# tidbits

./: .gitignore  2024-04-22_powerbi_restricting_access.html  README.md  a-comparison-of-piping-dataframe-operations-in-r-tidyverse-vs-python-pandas.html  add-some-colour-to-your-shell-cool-stuff-with-themes.html  add-some-colour-to-your-shell-modern-terminal-tools.html  adobe-acrobat-pro-dc-for-pdf-text-extraction.html  annotated-heatmaps-in-r-with-complexheatmap.html  archives.html  authors.html  automating-linting-and-error-checking-with-trunk.html  bayesian-changepoint-detection.html  better-autocompletion-in-jupyter-lab.html  categories.html  cleaning-a-git-diff.html  cleaning-up-a-server-find-big-files-and-folders-with-ncdu.html  cli-transfer-to-onedrive.html  convert_rmarkdown.R  counting-zeros-with-dplyr-summary-tools.html  cuda-vs-cpu-bert-embedding-benchmarks.html  debugging-bash.html  debugging-with-git-bisect.html  deploy-r-shiny-app-on-remote-server.html  design-patterns-part-1.html  easy-delivery-of-local-r-shiny-dashboards.html  find-github-pages.html  formatting-code-in-emails-and-presentations.html  fst-a-very-fast-file-format-for-r.html  generating-an-automatic-index-for-github-pages.html  getting-datatable-to-work-with-the-tidyverse.html  getting-ggplot-to-start-at-00.html  git-pre-commit-hooks-check-or-style-your-code-with-every-commit.html  handling-complex-python-dependencies-an-opinionated-guide.html  how-to-turn-ms-word-docx-into-json.html  how-to-use-a-trace-to-debug-a-crashing-program-in-linux.html  improve-your-email-communications-skills.html  (+48 more)
(+215 files in other folders)
