[tool.poetry]
name = "tidbits"
version = "0.1.0"
description = "Static blog for hosting technical tidbits"
authors = ["Marius <marius.mather@sydney.edu.au>"]

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.8"
Markdown = "*"
beautifulsoup4 = "*"
pelican-tag-cloud = "*"
# Note: not published on pypi yet, install from Github for now
pelican-tipue-search = {git = "https://github.com/pelican-plugins/tipue-search.git", branch = "main"}
alchemy = {git = "https://github.com/nairobilug/pelican-alchemy.git", branch = "master"}

[tool.poetry.dev-dependencies]
pip = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
